force-app/main/default/objects/Error_Log__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <label>Log</label>
    <type>DateTime</type>
</CustomField>