force-app/main/default/objects/Error_Log__c/fields/Log_no__c.field-meta.xml
<CustomField>
    <fullName>Log_no__c</fullName>
    <displayFormat>L-{0000}</displayFormat>
    <label>Log No</label>
    <type>AutoNumber</type>
</CustomField>