force-app/main/default/objects/Error_Log__c/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <label>Process Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>